--- a/index.html
+++ b/index.html
@@ -1,29 +1,13 @@
 <!DOCTYPE html>
 <HTML LANG="en">
 <HEAD>
-	<TITLE>&#128142; GEMS-TAB | Guitar exercises, melodies &amp; scales in tablature</TITLE>
+	<TITLE>&#9753; UKE-TAB | Ukulele Tablature</TITLE>
     <META charset="UTF-8" name="viewport" content="width=device-width, initial-scale=1">
 	<META http-equiv="content-Type" content="text/html; charset=utf-8" />
-	<META name="keywords" content="GEMS, guitar, exercises, melodies, scales, tab, tablature, 'GEMS in TAB'">
-	<META name="description" content="Guitar exercises, melodies &amp; scales in tablature.  Organized progressively in twelve levels.">	
+	<META name="keywords" content="chords, scales, songs, syllabus, tab, tablature, uke, ukulele">
+	<META name="description" content="Ukulele tablature of songs, scales and chords, with a syllabus organized progressively in twelve levels.">	
 	<LINK rel="stylesheet" type="text/css" href="./stylesheet.css"> 
-<!--
-	<meta name="google-site-verification" content="jM2B3HYwo_3AEsh7O01JUAD1_vblND-URrSru8qlE9g" />
-	<meta name="msvalidate.01" content="122A310580675420AD2FB259C2680F3F" />
-	<script>var clicky_site_ids = clicky_site_ids || []; clicky_site_ids.push(101258268);</script>
-	<script async src="//static.getclicky.com/js"></script>
--->
 
-<!-- Clarity tracking code for https://gems-tab.github.io/ -->
-<!--
-<script type="text/javascript">
-    (function(c,l,a,r,i,t,y){
-        c[a]=c[a]||function(){(c[a].q=c[a].q||[]).push(arguments)};
-        t=l.createElement(r);t.async=1;t.src="https://www.clarity.ms/tag/"+i;
-        y=l.getElementsByTagName(r)[0];y.parentNode.insertBefore(t,y);
-    })(window, document, "clarity", "script", "4skplj4tig");
-</script>
--->	
 <style>
 /* Style the tab */
 .sidetitle {
@@ -315,15 +299,13 @@
 </style>
 
 </HEAD>
-<BODY STYLE="background-color: #321414;">
-<DIV class="sidetitle">
-	<H1>
-	<SPAN STYLE="font-size: 10vh;">G</SPAN>&nbsp;uitar<BR />
-	<SPAN STYLE="font-size: 10vh;">E</SPAN>&nbsp;xercises<BR />
-	<SPAN STYLE="font-size: 10vh;">M</SPAN>&nbsp;elodies<BR />
-	<SPAN STYLE="font-size: 10vh;">S</SPAN>&nbsp;cales<BR />
-	</H1>
-</DIV>
+<BODY STYLE="background-color: #321414; font-family: Fredericka the Great">
+	<H1>UKE-TAB</H1>
+	Ukulele Tablature
+	<H2>Songs</H2>
+	<H2>Chords</H2>
+	<H2>Scales</H2>
+	<H2>Syllabus</H2>
 <div class="tab">
 	<!-- <button class="tablinks" onclick="window.location.href='./songlist.html';" id="Indexbutton">&#x1f50d;Index</button> -->
 	<button class="tablinks" onclick="openLevel(event, 'Index')" id="Indexbutton">&#x1f50d;Index</button>
