--- a/Pearl/JingleBellsChorus.html
+++ b/Pearl/JingleBellsChorus.html
@@ -207,7 +207,7 @@ A simple version
 <!-- Measures 1-2 -->
 <DIV STYLE="clear: left;">
 <!-- Measure 1 -->
-<SPAN STYLE="float: left; color: #696969;">
+<SPAN CLASS="tab" STYLE="float: left;">
 <!--#--><SPAN CLASS="measure">&nbsp;1</SPAN><BR />
 <!--A-->A&#x2500;&#x2500;&#x2500;&#x2500;&#x2500;&#x2500;&#x2500;&#x2500;&#x2500;&#x2500;&#x2500;&#x2500;&#x2500;&#x2500;&#x2500;&#x2500;&#x2500;&#x2500;&#x2500;&#x252C;<BR />
 <!--E-->E&#x2500;&#x2500;<STRONG>0</STRONG>&#x2500;&#x2500;&#x2500;<STRONG>0</STRONG>&#x2500;&#x2500;&#x2500;<STRONG>0</STRONG>&#x2500;&#x2500;&#x2500;&#x2500;&#x2500;&#x2500;&#x2500;&#x2500;&#x253C;<BR />
@@ -218,7 +218,7 @@ A simple version
 <BR />
 </SPAN>
 <!-- Measure 2 -->
-<SPAN STYLE="float: left; color: #696969;">
+<SPAN CLASS="tab" >
 <!--#--><SPAN CLASS="measure">2</SPAN><BR />
 <!--A-->&#x2500;&#x2500;&#x2500;&#x2500;&#x2500;&#x2500;&#x2500;&#x2500;&#x2500;&#x2500;&#x2500;&#x2500;&#x2500;&#x2500;&#x2500;&#x2500;&#x2500;&#x2500;&#x2500;&#x2510;<BR />
 <!--E-->&#x2500;&#x2500;<STRONG>0</STRONG>&#x2500;&#x2500;&#x2500;<STRONG>0</STRONG>&#x2500;&#x2500;&#x2500;<STRONG>0</STRONG>&#x2500;&#x2500;&#x2500;&#x2500;&#x2500;&#x2500;&#x2500;&#x2500;&#x2524;<BR />
@@ -232,7 +232,7 @@ A simple version
 <!-- Measures 3-4 -->
 <DIV STYLE="clear: left;">
 <!-- Measure 3-->
-<SPAN STYLE="float: left; color: #696969;">
+<SPAN CLASS="tab" STYLE="float: left;">
 <!--#--><SPAN CLASS="measure">&nbsp;3</SPAN><BR />
 <!--A-->A&#x2500;&#x2500;&#x2500;&#x2500;&#x2500;&#x2500;&#x2500;&#x2500;&#x2500;&#x2500;&#x2500;&#x2500;&#x2500;&#x2500;&#x2500;&#x2500;&#x2500;&#x2500;&#x2500;&#x252C;<BR />
 <!--E-->E&#x2500;&#x2500;<STRONG>0</STRONG>&#x2500;&#x2500;&#x2500;&#x2500;&#x2500;&#x2500;&#x2500;&#x2500;&#x2500;&#x2500;&#x2500;&#x2500;&#x2500;&#x2500;&#x2500;&#x2500;&#x253C;<BR />
@@ -243,7 +243,7 @@ A simple version
 <BR />
 </SPAN>
 <!-- Measure 4 -->
-<SPAN STYLE="color: #696969;">
+<SPAN CLASS="tab" >
 <!--#--><SPAN CLASS="measure">4</SPAN><BR />
 <!--A-->&#x2500;&#x2500;&#x2500;&#x2500;&#x2500;&#x2500;&#x2500;&#x2500;&#x2500;&#x2500;&#x2500;&#x2500;&#x2500;&#x2500;&#x2500;&#x2500;&#x2500;&#x2500;&#x2500;&#x2510;<BR />
 <!--E-->&#x2500;&#x2500;<STRONG>0</STRONG>&#x2500;&#x2500;&#x2500;&#x2500;&#x2500;&#x2500;&#x2500;&#x2500;&#x2500;&#x2500;&#x2500;&#x2500;&#x2500;&#x2500;&#x2500;&#x2500;&#x2524;<BR />
@@ -257,7 +257,7 @@ A simple version
 <!-- Measures 5-6 -->
 <DIV STYLE="clear: left;">
 <!-- Measure 5 -->
-<SPAN STYLE="float: left; color: #696969;">
+<SPAN CLASS="tab" STYLE="float: left;">
 <!--#--><SPAN CLASS="measure">&nbsp;5</SPAN><BR />
 <!--A-->A&#x2500;&#x2500;&#x2500;&#x2500;&#x2500;&#x2500;&#x2500;&#x2500;&#x2500;&#x2500;&#x2500;&#x2500;&#x2500;&#x2500;&#x2500;&#x2500;&#x2500;&#x2500;&#x2500;&#x252C;<BR />
 <!--E-->E&#x2500;&#x2500;<STRONG>1</STRONG>&#x2500;&#x2500;&#x2500;<STRONG>1</STRONG>&#x2500;&#x2500;&#x2500;<STRONG>1</STRONG>&#x2500;&#x2500;&#x2500;<STRONG>1</STRONG>&#x2500;&#x2500;&#x2500;&#x2500;&#x253C;<BR />
@@ -268,7 +268,7 @@ A simple version
 <BR />
 </SPAN>
 <!-- Measure 6 -->
-<SPAN STYLE="float: left; color: #696969;">
+<SPAN CLASS="tab" >
 <!--#--><SPAN CLASS="measure">6</SPAN><BR />
 <!--A-->&#x2500;&#x2500;&#x2500;&#x2500;&#x2500;&#x2500;&#x2500;&#x2500;&#x2500;&#x2500;&#x2500;&#x2500;&#x2500;&#x2500;&#x2500;&#x2500;&#x2500;&#x2500;&#x2500;&#x2510;<BR />
 <!--E-->&#x2500;&#x2500;<STRONG>1</STRONG>&#x2500;&#x2500;&#x2500;<STRONG>0</STRONG>&#x2500;&#x2500;&#x2500;<STRONG>0</STRONG>&#x2500;&#x2500;&#x2500;<STRONG>0</STRONG>&#x2500;&#x2500;&#x2500;&#x2500;&#x2524;<BR />
@@ -282,7 +282,7 @@ A simple version
 <!-- Measures 7-8 -->
 <DIV STYLE="clear: left;">
 <!-- Measure 7 -->
-<SPAN STYLE="float: left; color: #696969;">
+<SPAN CLASS="tab" STYLE="float: left;">
 <!-- --><SPAN STYLE="color: black; font-weight: bold;">&nbsp;&#x250C;&#x2500;&#x2500;&#x2500;&#x2500;&#x2500;&#x2500;&#x2500;&#x2500;&#x2500;&#x2500;&#x2500;&#x2500;&#x2500;&#x2500;&#x2500;&#x2500;&#x2500;&#x2500;&#x2500;<BR />
 <!-- -->&nbsp;&#x2502;1.</SPAN><BR />
 <!--#--><SPAN CLASS="measure">&nbsp;7</SPAN><BR />
@@ -295,7 +295,7 @@ A simple version
 <BR />
 </SPAN>
 <!-- Measure 8-->
-<SPAN STYLE="color: #696969;">
+<SPAN CLASS="tab" >
 <!-- --><SPAN STYLE="color: black; font-weight: bold;">&#x2500;&#x2500;&#x2500;&#x2500;&#x2500;&#x2500;&#x2500;&#x2500;&#x2500;&#x2500;&#x2500;&#x2500;&#x2500;&#x2500;&#x2500;&#x2500;&#x2500;&#x2500;&#x2500;&#x2510;<BR />
 <!-- -->&nbsp;</SPAN><BR />
 <!--#--><SPAN CLASS="measure">8</SPAN><BR />
@@ -311,7 +311,7 @@ A simple version
 <!-- Measures 9-10 -->
 <DIV STYLE="clear: left;">
 <!-- Measure 9 -->
-<SPAN STYLE="float: left; color: #696969;">
+<SPAN CLASS="tab" STYLE="float: left;">
 <!-- --><SPAN STYLE="color: black; font-weight: bold;">&nbsp;&#x250C;&#x2500;&#x2500;&#x2500;&#x2500;&#x2500;&#x2500;&#x2500;&#x2500;&#x2500;&#x2500;&#x2500;&#x2500;&#x2500;&#x2500;&#x2500;&#x2500;&#x2500;&#x2500;&#x2500;<BR />
 <!-- -->&nbsp;&#x2502;2.</SPAN><BR />
 <!--#--><SPAN CLASS="measure">&nbsp;9</SPAN><BR />
@@ -324,7 +324,7 @@ A simple version
 <BR />
 </SPAN>
 <!-- Measure 10 -->
-<SPAN STYLE="color: #696969;">
+<SPAN CLASS="tab" >
 <!-- --><SPAN STYLE="color: black; font-weight: bold;">&#x2500;&#x2500;&#x2500;&#x2500;&#x2500;&#x2500;&#x2500;&#x2500;&#x2500;&#x2500;&#x2500;&#x2500;&#x2500;&#x2500;&#x2500;&#x2500;&#x2500;&#x2500;&#x2500;&#x2510;<BR />
 <!-- -->&nbsp;</SPAN><BR />
 <!--#--><SPAN CLASS="measure">10</SPAN><BR />
