--- a/index.html
+++ b/index.html
@@ -8,13 +8,15 @@
 	<META name="description" content="Ukulele tablature of songs, scales and chords, with a syllabus organized progressively in twelve levels.">	
 	<LINK rel="stylesheet" type="text/css" href="./stylesheet.css"> 
 </HEAD>
-<BODY STYLE="background-color: #321414; font-family: Fredericka the Great">
-	<H1>UKE-TAB</H1>
-	Ukulele Tablature
-	<H2><A HREF="./songlist.html">Songs</A></H2>
-	<H2><A HREF="./chordlist.html">Chords</A></H2>
-	<H2><A HREF="./scalelist.html">Scales</A></H2>
-	<H2><A HREF="./syllabus.html">Syllabus</A></H2>
+<BODY STYLE="background-color: #010203; text-align: center; font-family: Fredericka the Great";>
+	<HR STYLE="opacity:0.5;">
+	<H1 CLASS="HeaderUke">UKE-TAB</H1>
+	<BR/>Ukulele Tablature
+	<HR STYLE="opacity:0.5;">
+	<H2 CLASS="H2Uke"><A HREF="./songlist.html">Songs</A></H2>
+	<H2 CLASS="H2Uke"><A HREF="./chordlist.html">Chords</A></H2>
+	<H2 CLASS="H2Uke"><A HREF="./scalelist.html">Scales</A></H2>
+	<H2 CLASS="H2Uke"><A HREF="./syllabus.html">Syllabus</A></H2>
 <!-- Scripts -->
 <script language="javascript" type="text/javascript" src="./footer.txt"></script>
 </BODY>
