--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
 	<META name="description" content="Ukulele tablature of songs, scales and chords, with a syllabus organized progressively in twelve levels.">	
 	<LINK rel="stylesheet" type="text/css" href="./stylesheet.css"> 
 </HEAD>
-<BODY STYLE="background-color: #010203; text-align: center; font-family: Fredericka the Great";>
+<BODY STYLE="background-color: #321414; text-align: center; font-family: Fredericka the Great";>
+<!--background-color: #010203 chalkboard black --> 
 	<HR STYLE="opacity:0.5;">
 	<H1 CLASS="HeaderUke">UKE-TAB</H1>
 	<BR/>Ukulele Tablature
