--- a/Pearl/Chord0000.html
+++ b/Pearl/Chord0000.html
@@ -10,7 +10,6 @@
 <BODY CLASS="PearlBody">
 <DIV CLASS="PearlNavBar">
 <SPAN STYLE="float: left;">
-	<SPAN CLASS = "NavButtonLeft"><A HREF="../index.html">&#x2630;</A></SPAN>
 	<div class="dropdown">
 		<button onclick="myFunction()" class="dropbtn">&#x2630;</button>
 			<div id="myDropdown" class="dropdown-content">
@@ -26,8 +25,8 @@
 				<A HREF="https://youtu.be/AlujmKgWIhY">YouTube</A>
 			</div>
 	</div>
-	<SPAN CLASS = "NavButtonLeft"><A HREF="../Turquoise/FMajorChords3Fingers.html">Easier</A></SPAN>
-	<SPAN CLASS = "NavButtonMid"><A HREF="../Amethyst/FMajorBarreChord.html">Harder</A></SPAN>
+	<SPAN CLASS = "NavButtonLeft" STYLE="opacity:0"><A HREF="#">Easier</A></SPAN>
+	<SPAN CLASS = "NavButtonMid" STYLE="opacity:0"><A HREF="#">Harder</A></SPAN>
 </SPAN>
 <BUTTON ONCLICK="document.getElementById('SettingsModal').style.display='block'" CLASS="Gear">&#x2699;</BUTTON>
 </DIV>
