--- a/Pearl/Chord0000.html
+++ b/Pearl/Chord0000.html
@@ -243,7 +243,7 @@ window.onclick = function(event) {
 <HR>
 <DIV CLASS="MM">MM = 120 BPM<BR /><BR /></DIV>
 <!-- First Phrase.  Measures 1-4 -->
-<DIV STYLE="clear: left;">
+<DIV CLASS="tab60" STYLE="clear: left;">
 <!-- Measure 1 -->
 <SPAN STYLE="float: left;">
 <!--!--><SPAN>&#x2007;</SPAN><BR />
@@ -259,7 +259,7 @@ window.onclick = function(event) {
 <!-- Measure 2 -->
 <SPAN STYLE="float: left;">
 <!--!--><SPAN>&#x2007;</SPAN><BR />
-<!--#--><SPAN CLASS="measure">3</SPAN><BR />
+<!--#--><SPAN CLASS="measure">2</SPAN><BR />
 <!--A-->&#x2500;&#x2500;&#x2500;&#x2500;&#x2500;&#x2500;&#x2500;&#x2500;&#x2500;&#x2500;&#x2500;&#x2500;&#x2500;&#x2500;&#x252C;<BR />
 <!--E-->&#x2500;&#x2500;&#x2500;&#x2500;&#x2500;&#x2500;&#x2500;&#x2500;&#x2500;&#x2500;&#x2500;&#x2500;&#x2500;&#x2500;&#x253C;<BR />
 <!--C-->&#x2500;&#x2500;<STRONG>0</STRONG>&#x2500;&#x2500;&#x2500;&#x2500;&#x2500;&#x2500;&#x2500;<STRONG>0</STRONG>&#x2500;&#x2500;&#x2500;&#x253C;<BR />
