--- a/Pearl/ScaleCMajor.html
+++ b/Pearl/ScaleCMajor.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <HTML LANG="en">
 <HEAD>
-	<TITLE>&#128142; C Major Scale [TAB]</TITLE>
+	<TITLE>&#9753; C Major Scale [UKE-TAB]</TITLE>
     <META charset="UTF-8" name="viewport" content="width=device-width, initial-scale=1">
 	<META name="keywords" content="C, diatonic, major, scale, tab, tablature, uke, ukulele">
 	<META name="description" content="Diatonic scale in the key of C major.  One octave in ukulele tablature.">
@@ -10,14 +10,21 @@
 <BODY CLASS="PearlBody">
 <DIV CLASS="PearlNavBar">
 <SPAN STYLE="float: left;">
-	<SPAN CLASS = "NavButtonLeft"><A HREF="../index.html">&#x2630;</A></SPAN>
-	<SPAN CLASS = "NavButtonLeft" STYLE="opacity:0">Prev</SPAN>
-	<SPAN CLASS = "NavButtonMid"><A HREF="./JingleBellsChorus.html">Next</A></SPAN>
-	<SPAN CLASS = "NavButtonMid" STYLE="opacity:0">Last</SPAN>
-	<SPAN CLASS = "NavButtonLeft" STYLE="opacity:0">Easier</SPAN>
-	<SPAN CLASS = "NavButtonMid" STYLE="opacity:0;">Harder</SPAN>
-	<SPAN CLASS = "NavButtonLeft" STYLE="opacity:0;">YouTube</SPAN>
-	<SPAN CLASS = "NavButtonLeft"><A HREF="#" onclick="window.print();return false;">Print</A></SPAN>
+	<div class="dropdown">
+		<button onclick="myFunction()" class="dropbtn">&#x2630;</button>
+			<div id="myDropdown" class="dropdown-content">
+				<A HREF="../index.html">Home</a>
+				<A HREF="../scalelist.html#CMajorPearl">Scales</a>
+				<A HREF="../syllabus.html#CMajorPearl">Syllabus</a>
+				<HR>
+				<A HREF="./Chord0000.html">Prev</A>
+				<A HREF="./JingleBellsChorus.html">Next</A>
+				<HR>
+				<A HREF="#" onclick="window.print();return false;">Print</A>
+			</div>
+	</div>
+	<SPAN CLASS = "NavButtonLeft" STYLE="opacity:0"><A HREF="#">Easier</A></SPAN>
+	<SPAN CLASS = "NavButtonMid" STYLE="opacity:0"><A HREF="#">Harder</A></SPAN>
 </SPAN>
 <BUTTON ONCLICK="document.getElementById('SettingsModal').style.display='block'" CLASS="Gear">&#x2699;</BUTTON>
 </DIV>
@@ -31,17 +38,10 @@
 <UL style="list-style-type:none;">
 	<LI STYLE="margin: 1vh 0;">
 		<label class="switch">
-		<input type="checkbox" onclick="showTempo()">
+		<input type="checkbox" checked onclick="showTempo()">
 		<span class="slider round"></span>
 		</label>
 		&emsp;Tempo
-	</LI>
-	<LI STYLE="margin: 1vh 0;">
-		<label class="switch">
-		<input type="checkbox" onclick="showLH()">
-		<span class="slider round"></span>
-		</label>
-		&emsp;Left Hand
 	</LI>
 	<LI STYLE="margin: 1vh 0;">
 		<label class="switch">
@@ -59,7 +59,7 @@
 	</LI>
 	<LI STYLE="margin: 1vh 0;">
 		<label class="switch">
-		<input type="checkbox" onclick="showLyrics()">
+		<input type="checkbox" checked onclick="showLyrics()">
 		<span class="slider round"></span>
 		</label>
 		&emsp;Lyrics
@@ -80,54 +80,39 @@
 
 <!-- Scripts -->
 <script>
+/* When the user clicks on the button, 
+toggle between hiding and showing the dropdown content */
+function myFunction() {
+  document.getElementById("myDropdown").classList.toggle("show");
+}
+
+// Close the dropdown if the user clicks outside of it
+window.onclick = function(event) {
+  if (!event.target.matches('.dropbtn')) {
+    var dropdowns = document.getElementsByClassName("dropdown-content");
+    var i;
+    for (i = 0; i < dropdowns.length; i++) {
+      var openDropdown = dropdowns[i];
+      if (openDropdown.classList.contains('show')) {
+        openDropdown.classList.remove('show');
+      }
+    }
+  }
+}
+</script>
+
+<script>
 	function showTempo() {
 		var x = document.getElementsByClassName("BPM");
 		var i;
 		for (i = 0; i < x.length; i++) {
-			if (x[i].style.display === "block") {
-				x[i].style.display = "none";
-			} else {
+			if (x[i].style.display === "none") {
 				x[i].style.display = "block";
+			} else {
+				x[i].style.display = "none";
 			}
 		}
 	}
-</script>
-
-<script>
-	function showLH() {
-		var x = document.getElementsByClassName("LHabove");
-		var y = document.getElementsByClassName("LHinline");
-		var z = document.getElementsByClassName("LHfiller");
-		var i;
-		var j;
-		var k;
-		
-/*		for (i = 0; i < x.length; i++) {
-			if (x[i].style.visibility === "visible") {
-				x[i].style.visibility = "hidden";
-			} else {
-				x[i].style.visibility = "visible";
-			}
-		}
-*/
-		for (j = 0; j < y.length; j++) {
-			if (y[j].style.display === "inline") {
-				y[j].style.display = "none";
-			} else {
-				y[j].style.display = "inline";
-			}
-		}
-
-
-		for (k = 0; k < z.length; k++) {
-			if (z[k].style.display === "inline") {
-				z[k].style.display = "none";
-			} else {
-				z[k].style.display = "inline";
-			}
-		}
-
-}
 </script>
 
 <script>
@@ -163,24 +148,10 @@
 		var x = document.getElementsByClassName("lyrics1");
 		var i;
 		for (i = 0; i < x.length; i++) {
-			if (x[i].style.display === "block") {
-				x[i].style.display = "none";
-			} else {
+			if (x[i].style.display === "none") {
 				x[i].style.display = "block";
-			}
-		}
-	}
-</script>
-
-<script>
-	function showChords() {
-		var x = document.getElementsByClassName("Accompaniment");
-		var i;
-		for (i = 0; i < x.length; i++) {
-			if (x[i].style.visibility === "visible") {
-				x[i].style.visibility = "hidden";
 			} else {
-				x[i].style.visibility = "visible";
+				x[i].style.display = "none";
 			}
 		}
 	}
@@ -194,7 +165,7 @@
 </DIV>
 <SPAN CLASS="BPM">MM = 80</SPAN><BR /><BR />
 <!-- First Phrase.  Measures 1-4 -->
-<DIV STYLE="clear: left;">
+<DIV CLASS = "tab80">
 <!-- Measure 1 -->
 <SPAN STYLE="float: left;">
 <!--#--><SPAN CLASS="measure">&emsp;1</SPAN><BR />
@@ -214,7 +185,7 @@
 <!--C-->&#x2500;&#x2500;&#x2500;&#x2500;&#x2500;&#x2500;&#x2500;&#x2500;&#x2500;&#x2500;&#x2500;&#x2500;&#x2500;&#x2500;&#x2500;&#x2500;&#x2500;&#x2500;&#x253C;<BR />
 <!--G-->&#x2500;&#x2500;&#x2500;&#x2500;&#x2500;&#x2500;&#x2500;&#x2500;&#x2500;&#x2500;&#x2500;&#x2500;&#x2500;&#x2500;&#x2500;&#x2500;&#x2500;&#x2500;&#x2534;<BR />
 <!--R--><SPAN CLASS="stems">&nbsp;&nbsp;&#124;&nbsp;&nbsp;&nbsp;&#124;&nbsp;&nbsp;&nbsp;&#124;&nbsp;&nbsp;&nbsp;&#124;&nbsp;</SPAN><BR />
-<!--T--><SPAN CLASS="count">&#x2007;&#x2007;&#x2007;1&#x2007;&#x2007;&#x2007;2&#x2007;&#x2007;&#x2007;3&#x2007;&#x2007;&#x2007;4</SPAN><BR />
+<!--T--><SPAN CLASS="count">&#x2007;&#x2007;1&#x2007;&#x2007;&#x2007;2&#x2007;&#x2007;&#x2007;3&#x2007;&#x2007;&#x2007;4</SPAN><BR />
 <BR />
 </SPAN>
 <!-- Measure 3 -->
@@ -235,8 +206,8 @@
 <!--E-->&#x2500;<STRONG>0</STRONG>&#x2500;&#x2500;&#x2500;&#x2500;&#x2500;&#x2500;&#x2500;&#x2500;&#x2500;&#x2500;&#x2500;&#x2500;&#x2500;&#x2500;&#x2500;&#x2500;&#x2562;<BR />
 <!--C-->&#x2500;&#x2500;&#x2500;&#x2500;&#x2500;<STRONG>2</STRONG>&#x2500;&#x2500;&#x2500;<STRONG>0</STRONG>&#x2500;&#x2500;&#x2500;&#x2500;&#x2500;&#x2500;&#x2500;&#x2500;&#x2562;<BR />
 <!--G-->&#x2500;&#x2500;&#x2500;&#x2500;&#x2500;&#x2500;&#x2500;&#x2500;&#x2500;&#x2500;&#x2500;&#x2500;&#x2500;&#x2500;&#x2500;&#x2500;&#x2500;&#x2500;&#x255C;<BR />
-<!--R--><SPAN CLASS="stems">&nbsp;&nbsp;&#124;&nbsp;&nbsp;&nbsp;&#124;&nbsp;&nbsp;&nbsp;&#x2577;</SPAN><BR />
-<!--T--><SPAN CLASS="count">&#x2007;&#x2007;1&#x2007;&#x2007;&#x2007;2&#x2007;&#x2007;&#x2007;3&#x2007;&#x2007;&#x2007;4</SPAN><BR />
+<!--R--><SPAN CLASS="stems">&nbsp;&#124;&nbsp;&nbsp;&nbsp;&#124;&nbsp;&nbsp;&nbsp;&#x2577;</SPAN><BR />
+<!--T--><SPAN CLASS="count">&#x2007;1&#x2007;&#x2007;&#x2007;2&#x2007;&#x2007;&#x2007;3&#x2007;&#x2007;&#x2007;4</SPAN><BR />
 <BR />
 </SPAN>
 </DIV>
