--- a/chordlist.html
+++ b/chordlist.html
@@ -35,7 +35,7 @@
 <tr class="header">
     <td></td>
 	<td></td>
-	<!-- <td>A</td> -->
+	<td>A</td>
     <!-- <td>A&sharp;<BR />B&flat;</td>-->
 	<!-- <td>B</td> -->
 	<td>C</td>
@@ -177,10 +177,10 @@
 <tr>
     <td>Major Added Sixth</td>
     <td>6</td>
-    <!-- <td></td> -->
+    <td></td>
 	<!-- <td></td> -->
 	<!-- <td></td> -->
-	<td><a href="./Pearl/Chord0000.html">C6</a></td>
+	<td id="0000"><a href="./Pearl/Chord0000.html">C6</a></td>
 	<!-- <td></td> -->
 	<!-- <td></td> -->
 	<!-- <td></td> -->
@@ -328,30 +328,44 @@
 	<td></td>
 	<td></td>
 	<td></td>
-	<td><A HREF="./Turquoise/Chordx03210.html">F<SUP>maj7</SUP>/A</A></td></td>
+	<td><A HREF="./Turquoise/Chordx03210.html">F<SUP>maj7</SUP>/A</A></td>
 	<td></td>
 	<td></td>
 	<td></td>
 </tr>
 -->
-<!--
 <tr>
 	<td>Minor Seventh</td>
     <td>m7</td>
-    <td><A HREF="./Opal/Am7.html">Am<SUP>7</SUP></A></td></td>
+    <td></td>
 	<td></td>
 	<td></td>
 	<td></td>
 	<td></td>
 	<td></td>
     <td></td>
-	<td><A HREF="./Pearl/ChordIntroEMinor7.html">Em<SUP>7</SUP></A></td>
+	<td></td>
 	<td></td>
 	<td></td>
 	<td></td>
 	<td></td>
 </tr>
--->
+<tr>
+	<td>Minor Seventh first inversion</td>
+    <td>/</td>
+	<td id="0000Am7"><a href="./Pearl/Chord0000(Am7).html">Am<SUP>7</SUP>/C</a></td>
+	<!-- <td></td> -->
+	<!-- <td></td> -->
+	<td></td>
+	<!-- <td></td> -->
+	<!-- <td></td> -->
+    <!-- <td></td> -->
+	<!-- <td></td> -->
+	<!-- <td></td> -->
+	<!-- <td></td> -->
+	<!-- <td></td> -->
+	<!-- <td></td> -->
+</tr>
 <!--
 <tr>
 	<td>Minor Seventh with Added Fourth</td>
