--- a/Pearl/JingleBellsChorus.html
+++ b/Pearl/JingleBellsChorus.html
@@ -5,7 +5,7 @@
     <META charset="UTF-8" name="viewport" content="width=device-width, initial-scale=1">
 	<META name="keywords" content="Pierpont, chorus, Christmas, Jingle Bells, holiday, One Horse Open Sleigh, secular, tab, tablature, traditional, ukulele">
 	<META name="description" content="Jingle Bells Chorus, by James Lord Pierpont.  The song was originally entitled as One Horse Open Sleigh.  A traditional American secular holiday song.  Music score in ukulele tablature.">	
-	<LINK rel="stylesheet" type="text/css" href="../stylesheet.css"> 
+	<LINK rel="stylesheet" type="text/css" href="../../stylesheet.css"> 
 </HEAD>
 <BODY CLASS="PearlBody">
 <DIV CLASS="PearlNavBar">
@@ -22,7 +22,7 @@
 					<HR>
 					<A HREF="#" onclick="window.print();return false;">Print</A>
 					<HR>
-					<A HREF="https://gems-tab.github.io/Pearl/JingleBellsChorus.html">Guitar</A>
+					<A HREF="../../Pearl/JingleBellsChorus.html">Guitar</A>
 				</div>
 		</div>
 		<SPAN CLASS = "NavButtonLeft" STYLE="opacity:0"><A HREF="#">Easier</A></SPAN>
