--- a/Pearl/Chord0000(Am7).html
+++ b/Pearl/Chord0000(Am7).html
@@ -3,9 +3,9 @@
 <HEAD>
 	<TITLE>&#9753; Am7/C Major Chord [UKE-TAB]</TITLE>
     <META charset="UTF-8" name="viewport" content="width=device-width, initial-scale=1">
-	<META name="keywords" content="Am7/C, dominant, chord, first, inversion, minor, seventh, tab, tablature, uke, ukulele">
+	<META name="keywords" content="Am7/C, chord, first, inversion, minor, seventh, tab, tablature, uke, ukulele">
 	<META name="description" content="A minor seventh chord in first inversion, as played on ukulele.">
-	<LINK rel="stylesheet" type="text/css" href="../stylesheet.css"> 
+	<LINK rel="stylesheet" type="text/css" href="../../stylesheet.css"> 
 </HEAD>
 <BODY CLASS="PearlBody">
 <DIV CLASS="PearlNavBar">
@@ -238,7 +238,7 @@ window.onclick = function(event) {
 	<tr><td align ="right">fret:</td><td><big>0</big></td><td><big>0</big></td><td><big>0</big></td><td><big>0</big></td></tr>
 	</table>
 	</DIV>
-	<img src = "../ChordCharts/0000.svg" alt="F chord"/>
+	<img src = "../ChordCharts/0000.svg" alt="Am7/C chord"/>
 </DIV>
 <HR>
 <DIV CLASS="MM">MM = 120 BPM<BR /><BR /></DIV>
