--- a/index.html
+++ b/index.html
@@ -6,18 +6,18 @@
 	<META http-equiv="content-Type" content="text/html; charset=utf-8" />
 	<META name="keywords" content="chords, scales, songs, syllabus, tab, tablature, uke, ukulele">
 	<META name="description" content="Ukulele tablature of songs, scales and chords, with a syllabus organized progressively in twelve levels.">	
-	<LINK rel="stylesheet" type="text/css" href="./stylesheet.css"> 
+	<LINK rel="stylesheet" type="text/css" href="../stylesheet.css"> 
 </HEAD>
-<BODY STYLE="background-color: #321414; text-align: center; font-family: Fredericka the Great";>
+<BODY STYLE="background-color: #321414; text-align: center; font-family: Fredericka the Great";">
 <!--background-color: #010203 chalkboard black --> 
 	<HR STYLE="opacity:0.5;">
-	<H1 CLASS="HeaderUke">UKE-TAB</H1>
+	<H1 CLASS="HeaderUke" STYLE="color: #b08d57;">UKE-TAB</H1>
 	<BR/>Ukulele Tablature
 	<HR STYLE="opacity:0.5;">
-	<H2 CLASS="H2Uke"><A HREF="./songlist.html">Songs</A></H2>
-	<H2 CLASS="H2Uke"><A HREF="./chordlist.html">Chords</A></H2>
-	<H2 CLASS="H2Uke"><A HREF="./scalelist.html">Scales</A></H2>
-	<H2 CLASS="H2Uke"><A HREF="./syllabus.html">Syllabus</A></H2>
+	<H2 CLASS="H2Uke" STYLE="color: #b08d57;"><A HREF="./songlist.html">Songs</A></H2>
+	<H2 CLASS="H2Uke" STYLE="color: #b08d57;"><A HREF="./chordlist.html">Chords</A></H2>
+	<H2 CLASS="H2Uke" STYLE="color: #b08d57;"><A HREF="./scalelist.html">Scales</A></H2>
+	<H2 CLASS="H2Uke" STYLE="color: #b08d57;"><A HREF="./syllabus.html">Syllabus</A></H2>
 <!-- Scripts -->
 <script language="javascript" type="text/javascript" src="./footer.txt"></script>
 </BODY>
