--- a/Garnet/BransleDePoitou.html
+++ b/Garnet/BransleDePoitou.html
@@ -5,7 +5,7 @@
     <META charset="UTF-8" name="viewport" content="width=device-width, initial-scale=1">
 	<META name="keywords" content="Bransle de Poitou, classical, Le Roy, tab, tablature, uke, ukulele">
 	<META name="description" content="Bransle de Poitou, composed by Adrian Le Roy.  Originally composed for guitar in 1552. Transposed for ukulele.">
-	<LINK rel="stylesheet" type="text/css" href="../stylesheet.css"> 
+	<LINK rel="stylesheet" type="text/css" href="../../stylesheet.css"> 
 </HEAD>
 <BODY CLASS="GarnetBody" >
 <DIV CLASS="GarnetNavBar">
