--- a/Garnet/BransleDePoitou.html
+++ b/Garnet/BransleDePoitou.html
@@ -22,7 +22,7 @@
 					<HR>
 					<A HREF="#" onclick="window.print();return false;">Print</A>
 					<HR>
-					<A HREF="https://gems-tab.github.io/Opal/BransleDePoitou.html">Guitar</A>
+					<A HREF="../../Opal/BransleDePoitou.html">Guitar</A>
 				</div>
 		</div>
 		<SPAN CLASS = "NavButtonLeft" STYLE="opacity:0"><A HREF="#">Easier</A></SPAN>
