--- a/syllabus.html
+++ b/syllabus.html
@@ -42,10 +42,26 @@
 		<LI ID="CMajorPearl"><A HREF="./Pearl/ScaleCMajor.html">Scale in C</A></LI>
 		<LI><A HREF="./Pearl/JingleBellsChorus.html">Jingle Bells</A></LI>
 		<LI ID="0000Am7"><A HREF="./Pearl/Chord0000(Am7).html">Am7 Chord</A></LI>
+		<LI><A href="#"><!--Scale on C<SUP>&sharp;</SUP>--></A></LI>
 	<H2 CLASS = "H2Uke" ID="OpalH2">Level 2:  Opal</H2>
+		<LI><A href="#"><!--Scale on D--></A></LI>
+		<LI><A href="#"><!--Dipidu--></A></LI>
 		<LI ID="Roud230Easy"><A HREF="./Opal/WeWishUMerryXmas.html">We Wish You a Merry Christmas</A></LI>
+	<H2 CLASS = "H2Uke" ID="TurquoiseH2">Level 3:  Turquoise</H2>
+		<LI ID="0000"><A HREF="#"><!--C6 Chord--></A></LI>
+	<H2 CLASS = "H2Uke" ID="PeridotH2">Level 4:  Peridot</H2>
+		<LI ID="RomanzaEasier"><A HREF="./Peridot/Romanza.html"><SPAN LANG="es" STYLE="font-style: italic;">Romanza</SPAN></A></LI>
+		<li><a href="#"><!--I Heard the Bells on Christmas Day--></a></li>
 	<H2 CLASS = "H2Uke" ID="GarnetH2">Level 5: Garnet</H2>
 		<LI><A HREF="./Garnet/BransleDePoitou.html"><SPAN LANG="fr" STYLE="font-style: italic;">Bransle de Poitou</SPAN></A></LI>
+	<H2 CLASS = "H2Uke" ID="AmethystH2">Level 6:  Amethyst</H2>
+		<LI ID="Roud230Harder"><A HREF="./Amethyst/WeWishUMerryXmas.html">We Wish You a Merry Christmas</A></LI>
+	<H2 CLASS = "H2Uke" ID="AquamarineH2">Level 7:  Aquamarine</H2>
+		<li><a href="#"><!--Last Post--></a></li>
+	<H2 CLASS = "H2Uke" ID="EmeraldH2">Level 8:  Emerald</H2>
+		<li><a href="#"><!--TBD--></a></li>
+	<H2 CLASS = "H2Uke" ID="TopazH2">Level 9:  Topaz</H2>
+		<LI ID="RomanzaHarder"><A HREF="./Topaz/Romanza.html"><SPAN LANG="es" STYLE="font-style: italic;">Romanza</SPAN></A></LI>
 </OL>
 <!-- Scripts -->
 <!-- Scripts -->
@@ -87,6 +103,8 @@ function myFunction() {
 	garnet = document.getElementById("GarnetH2");
 	amethyst = document.getElementById("AmethystH2");
 	aquamarine = document.getElementById("AquamarineH2");
+	emerald = document.getElementById("EmeraldH2");
+	topaz = document.getElementById("TopazH2");
     for (i = 0; i < li.length; i++) {
         a = li[i].getElementsByTagName("a")[0];
         txtValue = a.textContent || a.innerText;
@@ -102,6 +120,8 @@ function myFunction() {
 			garnet.style.display = "none";
 			amethyst.style.display = "none";
 			aquamarine.style.display = "none";
+			emerald.style.display = "none";
+			topaz.style.display = "none";
         }
     }
 }
