--- a/index.html
+++ b/index.html
@@ -1,24 +1,75 @@
 <!DOCTYPE html>
 <HTML LANG="en">
 <HEAD>
-	<TITLE>&#9753; UKE-TAB | Ukulele Tablature</TITLE>
+	<TITLE>&#128142; GEMS-TAB | Guitar exercises, melodies &amp; scales in tablature</TITLE>
     <META charset="UTF-8" name="viewport" content="width=device-width, initial-scale=1">
 	<META http-equiv="content-Type" content="text/html; charset=utf-8" />
-	<META name="keywords" content="chords, scales, songs, syllabus, tab, tablature, uke, ukulele">
-	<META name="description" content="Ukulele tablature of songs, scales and chords, with a syllabus organized progressively in twelve levels.">	
-	<LINK rel="stylesheet" type="text/css" href="../stylesheet.css"> 
+	<META name="keywords" content="GEMS, guitar, exercises, melodies, scales, tab, tablature, 'GEMS in TAB'">
+	<META name="description" content="Guitar exercises, melodies &amp; scales in tablature.  Organized progressively in twelve levels.">	
+	<LINK rel="stylesheet" type="text/css" href="./stylesheet.css">
+
+<!--
+	<meta name="google-site-verification" content="jM2B3HYwo_3AEsh7O01JUAD1_vblND-URrSru8qlE9g" />
+	<meta name="msvalidate.01" content="122A310580675420AD2FB259C2680F3F" />
+	<script>var clicky_site_ids = clicky_site_ids || []; clicky_site_ids.push(101258268);</script>
+	<script async src="//static.getclicky.com/js"></script>
+-->
+
+<!-- Clarity tracking code for https://gems-tab.github.io/ -->
+<!--
+<script type="text/javascript">
+    (function(c,l,a,r,i,t,y){
+        c[a]=c[a]||function(){(c[a].q=c[a].q||[]).push(arguments)};
+        t=l.createElement(r);t.async=1;t.src="https://www.clarity.ms/tag/"+i;
+        y=l.getElementsByTagName(r)[0];y.parentNode.insertBefore(t,y);
+    })(window, document, "clarity", "script", "4skplj4tig");
+</script>
+-->	
+	<STYLE>
+		body {background-color: #321414; text-align: center;}
+		.split {
+			height: 100%;
+			width: 45%;
+			position: fixed;
+			z-index: 1;
+			top: 0;
+			overflow-x: hidden;
+			padding-top: 20px;
+			}
+		.left {
+			left: 0;
+			background-color: #b08d57;
+			backdrop-filter: blur(5px);
+			color: #321414;
+			text-align: left;
+			}
+		.right {
+			right: 0;
+			background-color: #321414;
+			}
+	</STYLE>
 </HEAD>
-<BODY STYLE="background-color: #321414; text-align: center; font-family: Fredericka the Great";">
-<!--background-color: #010203 chalkboard black --> 
+<BODY>
+<DIV CLASS="split left">
 	<HR STYLE="opacity:0.5;">
-	<H1 CLASS="HeaderUke" STYLE="color: #b08d57;">UKE-TAB</H1>
-	<BR/>Ukulele Tablature
+	<H1 STYLE="color: #321414; font-family: 'Clicker Script', cursive;">
+		<SPAN STYLE="font-size: 10vh;">G</SPAN>&nbsp;uitar<BR>
+		<SPAN STYLE="font-size: 10vh;">E</SPAN>&nbsp;xercises<BR>
+		<A HREF="./songlist.html"><SPAN STYLE="font-size: 10vh;">M</SPAN>&nbsp;elodies</A><BR>
+		<A HREF="./scalelist.html"><SPAN STYLE="font-size: 10vh;">S</SPAN>&nbsp;cales</A>
+	</H1>
 	<HR STYLE="opacity:0.5;">
-	<H2 CLASS="H2Uke" STYLE="color: #b08d57;"><A HREF="./songlist.html">Songs</A></H2>
-	<H2 CLASS="H2Uke" STYLE="color: #b08d57;"><A HREF="./chordlist.html">Chords</A></H2>
-	<H2 CLASS="H2Uke" STYLE="color: #b08d57;"><A HREF="./scalelist.html">Scales</A></H2>
-	<H2 CLASS="H2Uke" STYLE="color: #b08d57;"><A HREF="./syllabus.html">Syllabus</A></H2>
+</DIV>
+<DIV CLASS="split right">
+	<HR STYLE="opacity:0.5;">
+<H2 CLASS="H2Uke" STYLE="color: #b08d57;"><A HREF="./songlist.html">Songs</A></H2>
+<H2 CLASS="H2Uke" STYLE="color: #b08d57;"><A HREF="./chordlist.html">Chords</A></H2>
+<H2 CLASS="H2Uke" STYLE="color: #b08d57;"><A HREF="./scalelist.html">Scales</A></H2>
+<H2 CLASS="H2Uke" STYLE="color: #b08d57;"><A HREF="./syllabus.html">Syllabus</A></H2>
+<HR STYLE="opacity:0.5;">
+<SPAN STYLE="color: #b08d57; font-family: Fredericka the Great"><A HREF="./UKE-TAB/index.html">UKE-TAB</A></SPAN>
+</DIV>
 <!-- Scripts -->
-<script language="javascript" type="text/javascript" src="./footer.txt"></script>
+<script language="javascript" type="text/javascript" src="./footer.txt"></script>	
 </BODY>
 </HTML>
