--- a/songlist.html
+++ b/songlist.html
@@ -6,7 +6,7 @@
 	<META http-equiv="content-Type" content="text/html; charset=utf-8" />
 	<META name="keywords" content="list, songs, tab, tablature, uke, ukulele">
 	<META name="description" content="List of songs found on UKE-TAB.">
-	<LINK rel="stylesheet" type="text/css" href="./stylesheet.css"> 
+	<LINK rel="stylesheet" type="text/css" href="../stylesheet.css"> 
 	<STYLE>
 	
 	 HR {
@@ -35,7 +35,7 @@
 
   table th, table td {
     padding: 10px;
-    text-align: center;
+    text-align: left;
 
   }
 
@@ -144,7 +144,58 @@ function myFunction() {
 	</tr>
 </thead>
 <tbody>
- <!--P-->
+	<!--A-->
+	<tr>
+		<td></td>
+		<td data-label="Composer"><SPAN STYLE="font-size:x-large;font-family: 'Fredericka the Great';">A</SPAN></td>
+		<td></td>
+		<td></td>
+		<td></td>
+		<td></td>
+	</tr>
+	<tr id="Roud230">
+		<td data-label="Link"><A HREF="./Amethyst/WeWishUMerryXmas.html"><SPAN STYLE="font-size:x-large;">&#10228;</SPAN></A></td>
+		<td data-label="Composer">Anon.</SPAN></td>
+		<td data-label="Song Title"><A HREF="./Amethyst/WeWishUMerryXmas.html"><SPAN LANG="en" STYLE="font-style: normal;font-size:x-large;">We Wish You a Merry Christmas</SPAN></A></td>
+		<td data-label="Genre">Christmas carol</td>
+		<td data-label="" style="font-size:smaller; text-align: left"><HR>Traditional English. Roud Folk Song Index No. 230. Arrangement by Arthur Sydney Warrell.</td>
+		<td data-label="Level" style="font-size:smaller;">Amethyst <SPAN STYLE="font-size:x-small;">[06]</SPAN></td>
+	</tr>
+	<!--H-->
+	<tr>
+		<td></td>
+		<td data-label="Composer"><SPAN STYLE="font-size:x-large;font-family: 'Fredericka the Great';">H</SPAN></td>
+		<td></td>
+		<td></td>
+		<td></td>
+		<td></td>
+	</tr>
+	<tr id="HappyBDay">
+		<td data-label="Link"><A HREF="./Opal/HappyBirthday.html"><SPAN STYLE="font-size:x-large;">&#10228;</SPAN></A></td>
+		<td data-label="Composer">Mildred Jane Hill</SPAN></td>
+		<td data-label="Song Title"><A HREF="./Opal/HappyBirthday.html"><SPAN LANG="en" STYLE="font-style: normal;font-size:x-large;">Happy Birthday to You</SPAN></A></td>
+		<td data-label="Genre">Traditional</td>
+		<td data-label="" style="font-size:smaller; text-align: left"><HR>Traditional American.</td>
+		<td data-label="Level" style="font-size:smaller;">Opal <SPAN STYLE="font-size:x-small;">[02]</SPAN></td>
+	</tr>
+	<!--L-->
+	<tr>
+		<td></td>
+		<td data-label="Composer"><SPAN STYLE="font-size:x-large;font-family: 'Fredericka the Great';">L</SPAN></td>
+		<td></td>
+		<td></td>
+		<td></td>
+		<td></td>
+	</tr>
+	<tr id="BransleDePoitou">
+		<td data-label="Link"><A HREF="./Garnet/BransleDePoitou.html"><SPAN STYLE="font-size:x-large;">&#10228;</SPAN></A></td>
+		<td data-label="Composer">Adrian Le Roy</SPAN></td>
+		<td data-label="Song Title"><A HREF="./Garnet/BransleDePoitou.html"><SPAN LANG="fr" STYLE="font-style: italic;font-size:x-large;">Bransle de Poitou</SPAN></A></td>
+		<td data-label="Genre">Classical</td>
+		<td data-label="" style="font-size:smaller; text-align: left"><HR>Originally composed for guitar in 1552.  Transposed for ukulele.</td>
+		<td data-label="Level" style="font-size:smaller;">Garnet <SPAN STYLE="font-size:x-small;">[05]</SPAN></td>
+	</tr>
+	<!--P-->
 	<tr>
 		<td></td>
 		<td data-label="Composer"><SPAN STYLE="font-size:x-large;font-family: 'Fredericka the Great';">P</SPAN></td>
@@ -153,10 +204,10 @@ function myFunction() {
 		<td></td>
 		<td></td>
 	</tr>
-	<tr>
+	<tr id="JingleBellsChorus">
 		<td data-label="Link"><A HREF="./Pearl/JingleBellsChorus.html"><SPAN STYLE="font-size:x-large;">&#10228;</SPAN></A></td>
 		<td data-label="Composer">James Lord Pierpont</SPAN></td>
-		<td data-label="Song Title""><A HREF="./Pearl/JingleBellsChorus.html"><SPAN STYLE="font-size:x-large;">Jingle Bells</SPAN></A></td>
+		<td data-label="Song Title"><A HREF="./Pearl/JingleBellsChorus.html"><SPAN STYLE="font-size:x-large;">Jingle Bells</SPAN></A></td>
 		<td data-label="Genre">Secular holiday song</td>
 		<td data-label="" style="font-size:smaller; text-align: left"><HR>Traditional American. Originally the song was entitled "One Horse Open Sleigh."</td>
 		<td data-label="Level" style="font-size:smaller;">Pearl <SPAN STYLE="font-size:x-small;">[01]</SPAN></td>
