--- a/syllabus.html
+++ b/syllabus.html
@@ -12,6 +12,7 @@
 			padding: 0;
 			margin: 0;
 			}
+
 	</STYLE>
 </HEAD>
 <BODY CLASS="Index" STYLE="font-family: serif;">
@@ -38,30 +39,31 @@
 </DIV>
 <OL ID="myOL">
 	<H2 CLASS = "H2Uke" ID="PearlH2">Level 1:  Pearl</H2>
-		<LI ID="0000"><A HREF="./Pearl/Chord0000.html">C6 Chord</A></LI>
-		<LI ID="CMajorPearl"><A HREF="./Pearl/ScaleCMajor.html">Scale in C</A></LI>
-		<LI><A HREF="./Pearl/JingleBellsChorus.html">Jingle Bells</A></LI>
-		<LI ID="0000Am7"><A HREF="./Pearl/Chord0000(Am7).html">Am7 Chord</A></LI>
-		<LI><A href="#"><!--Scale on C<SUP>&sharp;</SUP>--></A></LI>
+		<LI CLASS = "Prl" ID="0000"><A HREF="./Pearl/Chord0000.html">C6 Chord</A></LI>
+		<LI CLASS = "Prl" ID="CMajorPearl"><A HREF="./Pearl/ScaleCMajor.html">Scale in C</A></LI>
+		<LI CLASS = "Prl" ><A HREF="./Pearl/JingleBellsChorus.html">Jingle Bells</A></LI>
+		<LI CLASS = "Prl" ID="0000Am7"><A HREF="./Pearl/Chord0000(Am7).html">Am7 Chord</A></LI>
+		<LI CLASS = "Prl" ><A href="#"><!--Scale on C<SUP>&sharp;</SUP>--></A></LI>
 	<H2 CLASS = "H2Uke" ID="OpalH2">Level 2:  Opal</H2>
-		<LI><A href="#"><!--Scale on D--></A></LI>
-		<LI><A href="#"><!--Dipidu--></A></LI>
-		<LI ID="Roud230Easy"><A HREF="./Opal/WeWishUMerryXmas.html">We Wish You a Merry Christmas</A></LI>
+		<LI CLASS = "Opl"><A href="#"><!--Scale on D--></A></LI>
+		<LI CLASS = "Opl"><A href="#"><!--Dipidu--></A></LI>
+		<LI CLASS = "Opl" ID="HappyBday"><A HREF="./Opal/HappyBirthday.html">Happy Birthday to You</A></LI>
+		<LI CLASS = "Opl" ID="Roud230Easy"><A HREF="./Opal/WeWishUMerryXmas.html">We Wish You a Merry Christmas</A></LI>
 	<H2 CLASS = "H2Uke" ID="TurquoiseH2">Level 3:  Turquoise</H2>
-		<LI ID="0000"><A HREF="#"><!--C6 Chord--></A></LI>
+		<LI CLASS = "Trq" ID="0000"><A HREF="#"><!--C6 Chord--></A></LI>
 	<H2 CLASS = "H2Uke" ID="PeridotH2">Level 4:  Peridot</H2>
-		<LI ID="RomanzaEasier"><A HREF="./Peridot/Romanza.html"><SPAN LANG="es" STYLE="font-style: italic;">Romanza</SPAN></A></LI>
-		<li><a href="#"><!--I Heard the Bells on Christmas Day--></a></li>
+		<LI CLASS = "Pdt" ID="RomanzaEasier"><A HREF="./Peridot/Romanza.html"><SPAN LANG="es" STYLE="font-style: italic;">Romanza</SPAN></A></LI>
+		<LI CLASS = "Pdt"><a href="#"><!--I Heard the Bells on Christmas Day--></a></li>
 	<H2 CLASS = "H2Uke" ID="GarnetH2">Level 5: Garnet</H2>
-		<LI><A HREF="./Garnet/BransleDePoitou.html"><SPAN LANG="fr" STYLE="font-style: italic;">Bransle de Poitou</SPAN></A></LI>
+		<LI CLASS = "Grn"><A HREF="./Garnet/BransleDePoitou.html"><SPAN LANG="fr" STYLE="font-style: italic;">Bransle de Poitou</SPAN></A></LI>
 	<H2 CLASS = "H2Uke" ID="AmethystH2">Level 6:  Amethyst</H2>
-		<LI ID="Roud230Harder"><A HREF="./Amethyst/WeWishUMerryXmas.html">We Wish You a Merry Christmas</A></LI>
+		<LI CLASS = "Ams" ID="Roud230Harder"><A HREF="./Amethyst/WeWishUMerryXmas.html">We Wish You a Merry Christmas</A></LI>
 	<H2 CLASS = "H2Uke" ID="AquamarineH2">Level 7:  Aquamarine</H2>
-		<li><a href="#"><!--Last Post--></a></li>
+		<LI CLASS = "Aqm"><a href="#"><!--Last Post--></a></li>
 	<H2 CLASS = "H2Uke" ID="EmeraldH2">Level 8:  Emerald</H2>
-		<li><a href="#"><!--TBD--></a></li>
+		<LI CLASS = "Emr"><a href="#"><!--TBD--></a></li>
 	<H2 CLASS = "H2Uke" ID="TopazH2">Level 9:  Topaz</H2>
-		<LI ID="RomanzaHarder"><A HREF="./Topaz/Romanza.html"><SPAN LANG="es" STYLE="font-style: italic;">Romanza</SPAN></A></LI>
+		<LI CLASS = "Tpz" ID="RomanzaHarder"><A HREF="./Topaz/Romanza.html"><SPAN LANG="es" STYLE="font-style: italic;">Romanza</SPAN></A></LI>
 </OL>
 <!-- Scripts -->
 <!-- Scripts -->
